src/styles/layouts/_complaintDetails.scss
@import "../abstract/_colors.scss";

.containerDetails {
    padding: 1rem;
    margin: auto;
    max-width: 420px;
    height: 85vh;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 0.3fr 2.4fr;

    &__title {
        font-size: 2.3rem;
        max-width: 150px;
        font-weight: bold;
        white-space: nowrap;
        text-align: start;
        font-family: "Spartan", sans-serif;
        color: $secondary-blue;
    }

    &__imageBox {
        display: flex;
        align-items: center;
        justify-content: center;
        &-image {
            width: 100%;
            height: 124px;
            border-radius: 6px;
            object-fit: cover;
        }
    }

    &__description {
        margin-top: 25px;
        font-family: "Spartan", sans-serif;
        color: var(--text-color);
    }
}

